test/nexj/invalidbase/datasources/ExternalRelationalDatabase.datasource
<RelationalDatabase alias="NEXJ_DATABASE" indexfill="80" prefix="test." role="test" tablespace="nexjtest01">
   <Tables>
      <Table name="test.Visit" primaryKey="Visit.PK">
         <Columns>
            <Column allocation="fixed" name="id" precision="16" type="binary"/>
            <Column name="rec_ver" type="integer"/>
            <Column name="startDate" type="timestamp"/>
            <Column name="endDate" type="timestamp"/>
            <Column allocation="varying" name="reason" precision="256" type="string"/>
            <Column name="patientId" precision="16" type="binary"/>
         </Columns>
         <Indexes>
            <Index name="Visit.PK" unique="true">
               <IndexColumn name="id"/>
            </Index>
            <Index name="Visit.FK1" type="virtual">
               <IndexColumn name="patientId"/>
            </Index>
         </Indexes>
      </Table>
   </Tables>
</RelationalDatabase>
